<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="arrayAntiQ">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <!-- devlist -->
    <string name="btDisconnect">断开连接</string>
    <string name="rbPairedDev">已配对设备</string>
    <string name="rbNewDev">未配对设备</string>
    <string name="btTest">测试</string>
    <string name="tvDevList">蓝牙设备列表</string>

    <!-- inventorytag -->
    <string name="tvInventoryName">识别标签</string>
    <string name="tvCountOfTags">标签数&#160;&#160;</string>
    <string name="rbInventorySingle">单步</string>
    <string name="rbInventoryLoop">单标签循环</string>
    <string name="rbInventoryAnti">防碰撞</string>
    <string name="tvQ">Q值：</string>
    <string name="btInventory">识别标签</string>
    <string name="tvTagUii">标签号</string>
    <string name="tvTagLen">长度</string>
    <string name="tvTagCount">次数</string>
    <string name="btClear">清空数据</string>


    <string name="app_name" translatable="false">建设检测</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sample_list">SampleListActivity</string>
    <string name="title_activity_qrcode">QRCodeActivity</string>
    <string name="title_activity_report_detail">ReportDetailActivity</string>
    <string name="title_activity_sample_detail">SampleDetailActivity</string>
    <string name="title_activity_validate">ValidateActivity</string>
    <string name="title_activity_data_auditing">DataAuditingActivity</string>
    <string name="title_activity_construction_list">ConstructionListActivity</string>
    <string name="title_activity_project_list">ProjectListActivity</string>
    <string name="title_activity_frame_menu">FrameMenuActivity</string>
    <string name="title_activity_fragment_frame_menu">FragmentFrameMenuActivity</string>
    <string name="title_activity_sliding_menu">SlidingMenuActivity</string>
    <string name="title_activity_data_search">DataSearchActivity</string>
    <string name="title_activity_xie_shi_sliding_menu">XieShiSlidingMenuActivity</string>
    <string name="title_activity_auditing_detail">AuditingDetailActivity</string>
    <string name="title_activity_data_examine">DataExamineActivity</string>
    <string name="title_activity_today_statistics">TodayStatisticsActivity</string>
    <string name="title_activity_construction_search">ConstructionSearchActivity</string>
    <string name="title_activity_construction_detail">ConstructionDetailActivity</string>
    <string name="title_activity_unqualifield_search">UnqualifieldSearchActivity</string>
    <string name="title_activity_test_report">TestReportActivity</string>
    <string name="title_activity_report_preview">ReportPreviewActivity</string>
    <string name="title_activity_record_preview">RecordPreviewActivity</string>
    <string name="title_activity_examine_search">ExamineSearchActivity</string>
    <string name="title_activity_examine_detail">ExamineDetailActivity</string>
    <string name="title_activity_test_constract">TestConstractActivity</string>
    <string name="title_activity_sample_search">SampleSearchActivity</string>
    <string name="title_activity_report_content">ReportContentActivity</string>
    <string name="title_activity_upload_picture">UploadPictureActivity</string>
    <string name="title_activity_image_gallery">ImageGalleryActivity</string>
    <string name="title_activity_examine_report_detail">ExamineReportDetailActivity</string>
    <string name="title_activity_examine_sample_list">ExamineSampleListActivity</string>
    <string name="title_activity_examine_sample_detail">ExamineSampleDetailActivity</string>
    <string name="title_activity_examine_params">ExamineParamsActivity</string>
    <string name="title_activity_admin_today_statistics">AdminTodayStatisticsActivity</string>
    <string name="title_activity_admin_today_statistics_search">AdminTodayStatisticsSearchActivity</string>
    <string name="title_activity_qrcode_detail">QrcodeDetailActivity</string>
    <string name="title_activity_today_statistics_detail">TodayStatisticsDetailActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="title_activity_password">PasswordActivity</string>
    <string name="title_activity_password_complete">PasswordCompleteActivity</string>

    <string-array name="arrayBank">
        <item>RESERVED</item>
        <item>UII</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="arrayOption_Read">
        <item>单次读</item>
        <item>循环读</item>
        <item>防碰撞读（1级）</item>
        <item>防碰撞读（2级）</item>
    </string-array>

    //年假管理
    <string name="apply_date_select">选择</string>
    <string-array name="annual_leave_state">
        <item>全部</item>
        <item>申请中</item>
        <item>已批准</item>
    </string-array>

    //建设用砂管理
    <string name="sand_manage_info_provider_search_text" translatable="false">供应商列表</string>
    <string name="sand_manage_info_sales_manage_text" translatable="false">销售对象</string>
    <string name="company_query_result_text" translatable="false">销售对象</string>
    <string name="sand_manage_info_testing_manage_text" translatable="false">检测单位</string>
    <string name="testing_company_query_result_text" translatable="false">检测单位</string>
    <string name="sand_manage_flow_declaration_text" translatable="false">流向申报</string>
    <string name="sand_manage_testing_commission_text" translatable="false">检测委托</string>
    <string name="testing_commission_list_title_text">委托记录</string>
    <string name="sand_manage_info_query_text" translatable="false">结果查询</string>
    <string name="sand_testing_commission_supplier_text">供应商</string>
    <string name="sand_testing_commission_testing_commission_text">检测单位</string>
    <string name="result_query_detail_text">结果详情</string>
    <string name="sales_number_text"><![CDATA[0<数量≤1000]]></string>
    <string name="wether_today_now_temp_text">%.1f℃</string>
    <string name="wether_today_now_sd_text">%.1f%%</string>

    <string-array name="sampling_place_arr">
        <item>料堆</item>
        <item>皮带机</item>
        <item>运输车</item>
        <item>运输船</item>
    </string-array>

    <string-array name="testing_info_query_result_sample_state">
        <item>未送样</item>
        <item>已送样</item>
        <item>待检</item>
        <item>检测中</item>
        <item>已检</item>
        <item>在检已出报告</item>
    </string-array>

    //用砂类别
    <string-array name="sales_search_company_type">
        <item>预拌混凝土</item>
        <item>预制构件</item>
        <item>预拌砂浆</item>
    </string-array>

    //区县资源
    <string-array name="counties_arr">
        <item>全部</item>
        <item>宝山区</item>
        <item>外省市</item>
        <item>长宁区</item>
        <item>浦东新区</item>
        <item>金山区</item>
        <item>普陀区</item>
        <item>松江区</item>
        <item>静安区</item>
        <item>黄浦区</item>
        <item>嘉定区</item>
        <item>奉贤区</item>
        <item>闵行区</item>
        <item>杨浦区</item>
        <item>青浦区</item>
        <item>崇明区</item>
        <item>徐汇区</item>
        <item>虹口区</item>
    </string-array>
</resources>
